--- a/.verify-helper/config.toml
+++ b/.verify-helper/config.toml
@@ -1,3 +1,3 @@
 [[languages.cpp.environments]]
 CXX = "g++"
-CXXFLAGS = ["-std=c++17", "-Wall", "-Wextra", "-I", "ac-library"]
+CXXFLAGS = ["-std=c++17", "-Wall", "-Wextra", "-I", "ac-library", "-O2"]
